.provarCaches/00D5f000005vwGkEAI/objects/rstk__icreqdmd__c.object
<CustomObject>
    <description>icreqdmd__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Alternate external ID</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__icreqdmd_div__r.rstk__sydiv_dflthomeproj__c</formula>
        <inlineHelpText>Internal formula for constructing the associated field.</inlineHelpText>
        <label>Formula Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icreqdmd_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__icreqdmd_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp;  rstk__icreqdmd_ordno__c &amp; &apos;_&apos; &amp;  rstk__icreqdmd_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c
/*This formula should NOT be changed as the code assumes this formula and it would break if this is changed - see THIcreq*/</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is Component Item Number of the Subcontract requisition Assembly (often termed ‘Subcontract requisition Parent Item’) 

Also refer to BILL OF MATERIAL EFFECTIVITY (in Common Fields/Concepts Section) in that often times the adding of the Subcontract requisition Demand is performed in the Bill of Material explode function and this ICREQDMD_COMPITEM correlates to the PEBOM_COMPITEM. (DD)</description>
        <inlineHelpText>Subcontract Requisition Component Item Number</inlineHelpText>
        <label>Comp Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>PO_Requisition_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This must correlate to a ICREQ_DIV. (DD)</description>
        <inlineHelpText>Subcontract Requisition Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>divicreqdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_dmdsts__c</fullName>
        <description>Generally this is the same value as the ICREQ_ORDSTS. For efficiency reasons however the system doesn’t update the ICREQDMD_DMDSTS every time it updates the ICREQ_ORDSTS. 

Key values in this field are for MRP considerations only: 

If this is a ‘1’ then MRP will delete this record 

If this is a ‘2’ , ‘3’ then MRP will process this record. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Status</inlineHelpText>
        <label>DMDSTS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_dtereqd__c</fullName>
        <description>This is the Required Date , for when this is converted to a subcontract purchase order, for this demand’s component is to be picked and issued to the subcontract requisition. 

Barring changes to the ICREQ_EFFDTE and/or MRP considering a Lead Time Offset (from the PEBOMOVR_LTOFFSET field), this date is the ICREQ_POPLACEDTE. (DD)</description>
        <inlineHelpText>Subcontract Requisition Date Required</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_enginvumcf__c</fullName>
        <description>The bill of material (PEBOM) is in the Engineering Unit of Measure. 

The quantities on the Subcontract requisition demand are all in the Inventory Unit of Measure. 

As part of the Bill of Material Explosion/Copy the Quantities on the Subcontract requisition demand need to apply the ‘Engineering to Inventory’ Unit of Measure Conversion Factor. (DD)</description>
        <inlineHelpText>Engineering to Inventory Unit of Measure Conversion Factor</inlineHelpText>
        <label>ENGINVUMCF</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_fixqtyflag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if this demand will have the same demand quantity required regardless of the Subcontract requisition Parent Quantity of the Assembly (in which case the ICREQDMD_FIXQTYFLAG = ‘T’) 

If this indicator is ‘F’ (false) the Subcontract requisition Parent Quantity if multiplied by the Quantity Per. 
On a Bill of Material Explosion to create the subcontract requisition demands, the ICREQDMD_FIXQTYFLAG is set from the PEBOM_FIXQTYFLAG. (DD)</description>
        <inlineHelpText>Indicates that this Demand will have the same Quantity - independent from the Parent quantity</inlineHelpText>
        <label>FIXQTYFLAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_homeprojind_pl__c</fullName>
        <description>This field only has applicability in a project control environment (SYDIV_PROJACT = ‘T’) 

Refer to PROJECT (in Common Fields/Concepts) 

Selections are ‘Not Home’ or ‘Project Home’. 

‘Project Home’ - Project Home item is an item that is common and used in all projects within a division. An example is hardware. 

‘Not Home’ - Not Home items are items that are specific to a single project. An example is a jet engine purchased for the specific airliner. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Home Project Indicator</inlineHelpText>
        <label>homeprojind_pl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Home</fullName>
                </value>
                <value>
                    <fullName>Project Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_icreq__c</fullName>
        <inlineHelpText>Subcontract Requisition Number</inlineHelpText>
        <label>ICREQ</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>ICREQDMDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_invuom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field holds the unit of measure in which this item is inventoried. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Inventory Unit of Measure</inlineHelpText>
        <label>invuom_ui</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>PO_Requisition_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_issproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field only has applicability in a project control environment (SYDIV_PROJACT = ‘T’) 

Refer to PROJECT (in Common Fields/Concepts) 

The ICREQDMD_ISSPROJ is set based on the value of the ICREQDMD_HOMEPROJIND  

At the present time the user can not override the value of this field, once set. 

There will be a future capability in a project control environment to allow the user to override this field.  

If the POLINE is created from the ICREQDMD in PO Convert, then the POD_ISSPROJ is set to the value from the ICREQDMD_ISSPROJ. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand - Next Project to be Issued from</inlineHelpText>
        <label>issproj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>PO Requisition Demand (issproj_ui)</relationshipLabel>
        <relationshipName>icreqdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_isswbs__c</fullName>
        <inlineHelpText>Subcontract Requisition Work Break Down Structure</inlineHelpText>
        <label>ISSWBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_itemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is initialized to null. 

Currently there are no plans to track inventory by ‘item revision’ which was the intent of this field. 

At the present time this is a hidden field. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Item Revision</inlineHelpText>
        <label>itemrev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>PO_Requisition_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_mrplaunch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRP Launch</label>
        <referenceTo>rstk__mrplaunch__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>icreqdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_ordno__c</fullName>
        <description>This must correlate to a ICREQ_ORDNO. (DD)</description>
        <inlineHelpText>Subcontract Requisition Order Number</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field only has applicability in a project control environment (SYDIV_PROJACT = ‘T’) 

Refer to PROJECT description (in Common Fields/Concepts Section)  

This field is always set to the ICREQ_PROJ  

For convenience sake the system duplicates the ICREQ_PROJ field and insures it initializes the ICREQDMD_PROJ. (DD)</description>
        <inlineHelpText>Project</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>PO Requisition Demand (proj_ui)</relationshipLabel>
        <relationshipName>PO_Requisition_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the ICREQDMD is added which happens prior to any issues, this field is initialized to the ICREQDMD_QTYREQ 

This is an important field because this is the field that MRP uses to determine the real demand for this Work Order Component. 

As the ICREQ_QTYCNVRTED gets incremented, this field gets decremented by their pro rata share. 

As the ICREQ_QTYCNVRTED gets decremented, this field gets incremented by their pro rata share. 

This value can never be more than the ICREQDMD_QTYREQ and this value can never be less than zero. (DD)</description>
        <inlineHelpText>Subcontract Requisition Quantity Outstanding</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the ICREQDMD_FIXQTYFLAG = ‘F’, the Quantity Per of a component (ICREQDMD_QTYPER) is multiplied by the Quantity Required of the order(ICREQ_QTYREQ) in deriving the ICREQDMD_QTYREQ. 

Note: The complete calculation including scrap factors and setup quantity is in the definition of ICREQDMD_QTYREQ 

When the ICREQDMD_FIXQTYFLAG = ‘T’ this ICREQDMD_QTYPER field is really not a ‘QUANTY PER’ per se. Rather in this situation, the Quantity Per of a component (ICREQDMD_QTYPER) is the ICREQDMD_QTYREQ. 

Note: The complete calculation including scrap factors and setup quantity is in the definition of ICREQDMD_QTYREQ 

On a Bill of Material Explosion to create the subcontract requisition demands, the ICREQDMD_QTYPER is set from the PEBOM_QTYPER. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Quantity Per</inlineHelpText>
        <label>QTYPER</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the quantity required to assemble/build the Subcontract requisition Parent Item 

Refer to COMMON QUANTITY FIELDS description (in Common Fields/Concepts Section)  

Assuming that this is not a fixed quantity (where a fixed quantity indicator = ‘T’), the quantity in this field is the sum of the following fields divided by the scrap factor (ICREQDMD_SCPPCT): 

(ICREQ_QTYREQ * ICREQDMD_QTYPER) 

+ ICREQDMD_SETQTY 

If this is a fixed quantity (ICREQDMD_FIXQTYFLAG = ‘T’) (and therefore there is no consideration of QTYPER), the quantity in this field is the sum of the following fields divided by the scrap factor (ICREQDMD_SCPPCT): 

(1 * ICREQDMD_QTYPER) 

+ ICREQDMD_SETQTY 

Note: The ICREQDMD_QTYPER will contain the fixed amount. (DD)</description>
        <inlineHelpText>Quantity required to build the Subcontract Parent Item</inlineHelpText>
        <label>QTYREQ</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_scppct__c</fullName>
        <description>This is the component demand scrap factor 

This indicates that there will be anticipated component scrap. The last application in the ICREQDMD_QTYREQ calculation is dividing the required quantity by the scrap factor). 
On a Bill of Material Explosion to create the subcontract requisition demands, the ICREQDMD_SCPPCT is set from the PEBOM_SCRAPPCT. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Scrap Factor</inlineHelpText>
        <label>SCPPCT</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_setqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If there is always a certain amount of planned scrap – no matter what the Subcontract requisition Batch size is, then that ICREQDMD_SETQTY can be set to that planned scrap amount. 

 Refer to the explanation of the ICREQDMD_QTYPER &amp; ICREQDMD_QTYREQ 

On a Bill of Material Explosion to create the subcontract requisition demands, the ICREQDMD_SETQTY  is set from the PEBOM_SETUPQTY. (DD)</description>
        <inlineHelpText>Subcontract Requisition Demand Set up Quantity</inlineHelpText>
        <label>SETQTY</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This must correlate to a ICREQ_SITE. (DD)</description>
        <inlineHelpText>Subcontract Requisition Site</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>PO Requisition Demand</relationshipLabel>
        <relationshipName>PO_Requisition_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdmd_wbs__c</fullName>
        <inlineHelpText>Subcontract Requisition Demand Work Breakdown Structure (WBS)</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Requisition Demand</label>
    <listViews>
        <fullName>rstk__RS_Subcontract_Req_Demand</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__icreqdmd_div__c</columns>
        <columns>rstk__icreqdmd_icreq__c</columns>
        <columns>rstk__icreqdmd_ordno__c</columns>
        <columns>rstk__icreqdmd_dtereqd__c</columns>
        <columns>rstk__icreqdmd_itemrev__c</columns>
        <columns>rstk__icreqdmd_compitem__c</columns>
        <columns>rstk__icreqdmd_dmdsts__c</columns>
        <columns>rstk__icreqdmd_qtyreq__c</columns>
        <columns>rstk__icreqdmd_qtyper__c</columns>
        <columns>rstk__icreqdmd_qtyoutstdg__c</columns>
        <filterScope>Everything</filterScope>
        <label>Subcontract Req Demand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Subcontract_Req_Demand_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__icreqdmd_div__c</columns>
        <columns>rstk__icreqdmd_icreq__c</columns>
        <columns>rstk__icreqdmd_ordno__c</columns>
        <columns>rstk__icreqdmd_dtereqd__c</columns>
        <columns>rstk__icreqdmd_itemrev__c</columns>
        <columns>rstk__icreqdmd_compitem__c</columns>
        <columns>rstk__icreqdmd_dmdsts__c</columns>
        <columns>rstk__icreqdmd_qtyreq__c</columns>
        <columns>rstk__icreqdmd_qtyper__c</columns>
        <columns>rstk__icreqdmd_qtyoutstdg__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Subcontract Req Demand - Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ICREQDMD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Requisition Demand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>